# ChangeLog for www-client/seamonkey
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.450 2013/04/14 21:09:56 polynomial-c Exp $

*seamonkey-2.17.1 (14 Apr 2013)

  14 Apr 2013; Lars Wendler <polynomial-c@gentoo.org> -seamonkey-2.16.2.ebuild,
  +seamonkey-2.17.1.ebuild:
  Version bump. Removed old.

  09 Apr 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-2.17.ebuild:
  Stable for x86, wrt bug #464226

  09 Apr 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-2.17.ebuild:
  Stable for amd64, wrt bug #464226

  08 Apr 2013; Jory A. Pratt <anarchy@gentoo.org> seamonkey-2.17.ebuild:
  Pax mark all unconditionally for hardened support

*seamonkey-2.17 (03 Apr 2013)

  03 Apr 2013; Lars Wendler <polynomial-c@gentoo.org> +seamonkey-2.17.ebuild:
  Version bump.

  29 Mar 2013; Jory A. Pratt <anarchy@gentoo.org> seamonkey-2.16.2.ebuild:
  Fix hardened support for jit

  25 Mar 2013; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.16.2.ebuild:
  Adjusted sqlite dependencies as requested in bug #462404.

  15 Mar 2013; Lars Wendler <polynomial-c@gentoo.org>
  -seamonkey-2.0.14-r1.ebuild,
  -files/seamonkey-2.0.14-curl7217-includes-fix.patch,
  -files/seamonkey-2.3.1-scrollbar-mouse-interaction-improvement.patch,
  -seamonkey-2.16.ebuild, -files/enigmail/70_enigmail-fix.patch,
  -files/seamonkey-2.2-curl7217-includes-fix.patch, -seamonkey-2.4.1-r1.ebuild,
  -files/firefox-15.0-fix-gstreamer-html5-crash.patch,
  -files/Copy_xpcshell_only_if_tests_are_enabled.patch, metadata.xml:
  Big cleanup requested by ago. All old, non-working and/or vulnerable versions
  are now gone.

  13 Mar 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-2.16.2.ebuild:
  Stable for x86, wrt bug #460818

  13 Mar 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-2.16.2.ebuild:
  Stable for amd64, wrt bug #460818

*seamonkey-2.16.2 (11 Mar 2013)
