@@ -59,24 +59,24 @@ DIST seamonkey-2.17.1-zh-CN.xpi 804873 SHA256 27c6d2c83a1007f2ad2003bd3886185dfd
 DIST seamonkey-2.17.1-zh-TW.xpi 807279 SHA256 12df38ab82e2b8bea4d5bded1ff630051bd177f92bbf3b2a5610d2c1f235fc1e SHA512 c027d21ea19a4581d758a263b15a982cedc18e89080eea2b4724d0e24c9d7d47d6160346fe8cc9b3391b1344af39a227bc9a376708e392274c850412e89168d0 WHIRLPOOL bdfc1f7a9012dc5cfe801c3fa1afa57116ba438fb921475e59e5bd5a68e11c3a3284cc8c72b76663f0a8eb29a73d169e1f6d227ee221e828b3c935bbc0a3add2
 DIST seamonkey-2.17.1.source.tar.bz2 122794219 SHA256 7795c181acd1c5d96c170fe5a43c3e9cae9f968007fcc0643b4996f9ec94b9bd SHA512 59a0fa0760247e936e74194d7508bb6553c45ea6108e5a21c193833d91c9fb5de2106ce477273f92ffc24d777744fc238dec8e625f33f1ef5b5112f4a895bcd3 WHIRLPOOL b2329a7b576943a26f6cec2e8b28986bb74daff95467b7d35ef516a9b7ad5f334edc8796305bb1ef16e6b2f689092fb582509458641bec1b81b8526798198de6
 DIST seamonkey-2.17.source.tar.bz2 122785037 SHA256 686b573b17397a805ed771c79f14e4354ec23c5a205361e8142dee364c76eb86 SHA512 230a23a16ad430686e3d2dbee0c28ee27478b19297947979a841b3a15bfed490f76170b32016162345cc77d7d65ff07534d1536cf7507b79983153faaeb66886 WHIRLPOOL 23c40b6f0d65d97edce4c302d4895ad7dc30d8f8f73f8235474500423de9877ee4b1c9772f12e79ad4a292412ab53d57bb7ca6ec7a015dc5d1b34de04638bbbd
-EBUILD seamonkey-2.17.1.ebuild 10173 SHA256 8830540d37878edf3443913d64f414a3bbeb97ac23473d6f628816b21b437780 SHA512 625e08b9d347993fec98d0946aec43cb063146534e036d67ff65ba2198226511a31ebe5526dee5cd0d5da096d451ae73d4d1bee9a4f6896cf2e9a38a50276c4b WHIRLPOOL c3d8da14b3eb3c3f2715c136f7ec46f4a83640330dfc3e4809af9ae62c1d4e67b36301a2733dcafc4689642c9d35b5658b0e5d3ea1cad758c3ec9a2b8a24504e
-EBUILD seamonkey-2.17.ebuild 10160 SHA256 0cf41f7d2699acdc26c772b2e57203ff14a1f212d088dc20ba6bbc036f914b90 SHA512 a6c6347b69cc18efa10f8626177df227792cb517ac412a157d58e6882e1fa9f95d591f23378af1d5065e2ebfca19a806da7af7bd172a91e3dfb5ba2ae6deddf3 WHIRLPOOL 5b601eab82f09cff1caa5e60c168fc0f74b0f500ab5fcf8949264de3758fa05dc58e552b440f041fc3d21d3d1da42cec2c71bedeed6dfe10aaf75fb6edc90fab
-MISC ChangeLog 62720 SHA256 6f0746b93837054af68e8f67c72e63d68c24f196b719ac0bba5e814f4a388b01 SHA512 dc2d9d4f04ec5a77b83ecf83c7a3cd398ae393aa74bd4e2321507a8d4834f24db40dd430cd86e4ca02b23ef4a3f821292420f37812548d01d0fbedb0230fb4c4 WHIRLPOOL cb8448e75551d1a1edd190b5137931bbcbbf73ba19f6f212a3095666911899944f8e250f96b920e97eed7281770af4e0d9cd715c0f3144df8f3faf21379ef16b
+EBUILD seamonkey-2.17.1.ebuild 10173 SHA256 1d180f3c320786229b7cc4047399ac9553d7c6822671cf28f97e6f05815f8f07 SHA512 0d08eb0dd96a416b7a74f4f43a06334cf5cea88120d9bce75a08d1ecac12493fd986459249b8fdaec0ff0369d69e68dc6c3be9ac1c3039e817597bb8457a78f4 WHIRLPOOL 5370b30ffd7272cf4a7e53d0245fda860811d5cc6ea34327d0c4b2a0e1a4073bb9606dc08ed10909832e3b1f2097ed96e57424f6afc1cfbfaa087ee9c5b35666
+EBUILD seamonkey-2.17.ebuild 10169 SHA256 9acb7adbd23644256fa6e4020a4655fdee9bd56721a47740b101194bb2a21616 SHA512 0fb401eeba68089971467ec841a1485788845c524131386f41372f42a14c2a0c5977cac236a403483369c8e03351cac0c3d26798d5ded9ee29aa0f1d556ec014 WHIRLPOOL 85cad6fe8b448f07b08d87c3093d7bf7fe3637a4cf575d113aaa50838886b48d63abb32d97f92880d823193b9a83dd1d4d01f496996897c504affaa33557c1aa
+MISC ChangeLog 62881 SHA256 6009c4aaa8d9d32b6e967fdac346c85dd4314eddca41d34f15ef684863d66f4e SHA512 e28cb4792e637e4d029f93d2ad6f631f94cb9ab67cc90fbfe6ec15f7a35d4d45456dc790fe2998c14f4cda11cb4965d7e61685ae7d4ad765c8ae3f443c23a0af WHIRLPOOL af82eceae4f44aa6cc4b36f8e21e57ef006ffa96d0d530b12fb403732f3bac6733ccb3056d77164e985da348f4fef0cca8ea80ea0db7899baaaa0fb40c6ea533
 MISC metadata.xml 894 SHA256 06135250ed64c7130399e6d34a2635f3ccc28732f940541ccc526c6da296aa0f SHA512 b0ffd47a424b37a949d8321a08b390fdd49528c4360ce59e727b75f80c394feab22a0af353cc0be6d1d33faec1091bc396f6e10e17c11ffc0aaf8ea86d67c95f WHIRLPOOL 657d5be470d0e8b7a66dcff4a60b64f67ef1434dd13b4a4c473d7e7718ac17356e7a89821d82dcf8e3ce7a0acccf35ecaf146d934ec4d8f066698329b655c6a9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRaxslAAoJEPiazRVxLXTFH18P+gOwbxqpcGruaM9W3gxrtMjd
-1zOdyK0NGo3v6NZe+jYVefG8uNFYeEiVOj0iQnVnm4r1ZKlRLEjepW+n6xkWiCO9
-Pc+VpvxZVY5PpilSRNP/KKQq1/6cdGroUt9xtPhpyWIfaR9l6TBlACKcLNQgshKn
-epgB09tDTfIMi5BjzCmzXyfdNcmDKJqjrNSZ5PGAT78XMXbTO7pQc5ddvfC6ABeY
-b4SsC70lz83RmGIeGzq6+1MWG5zftanL/UGq9aijje/eI7ptT8okRlEMUXqmC7v2
-NRnkIPvhomwfRDBuTmgzWFZ13pr71IXYio/ypsrFskCkSfvydiVSYNbCt0u2biu9
-tgkKjH1of+r0CuI+mNhW5VvK1dQ8DahKTqcwo9W4DQ7K1bEnt02SLPmrsZSJocO5
-ELEkN+C25/7wWSkELs7w5CNw1ZfKSvxND/JvMpGG50sSc5YzyKF3VCpdMGh1ZYB5
-WX2OFJjFtMEwZNGkPmO1Z/1M84VnnRcw6wsXDxdDeXqtQ7Z2OAHLchXkOOipfKe+
-OQS0qEthHNwh2JQOlrnb+Q2G0CghHRglDP24DMTkZGn+PaVwk+EejR5vmZ4bxYFA
-HnQCWs2tc9uGIGteENfvFDhNNAKtBFh8RzYr0WHMMx6vYrhptHpeMYTeMBzrw1Kk
-2euk8QWjIghMZsJUs0yG
-=cTn5
+iQIcBAEBCAAGBQJRbOi2AAoJEPiazRVxLXTFxZ4P/1jmg7a85WNCKEh01DvBUcm0
+RJYwGq2LCLMfuSQsEBCJA0qeRKDl4ad1Ft+aMjUhJ8h59hfHcS9h3tWArVtQ5CdX
+ZjvLsC4mwDbgS/7E0UVQQ6XN+i4aOafc/2FXFCStD8cC7Ln1rSnj+/VwfOl+9Q9c
+/7NLlFNWOVlfdHZucF/oRjtoQj0APbGuNVQTNo38xn3UTRtMDkSJc1SO09ytY5kA
+8mQB0ZXnzN7pLeYyazmoNlshg3bOk7ovXK82tx2EXuANSE2H07+gp8EZI4R181Qm
+ukHH/R5ABbvlcF/QfvtshwSl19guIJZ177m0DyvCaJiKUYOuJ+eEsVmITkrUZdU9
+LbMc9mzv7SkNuXJoxL1us7grJVXnx9jakkHa84npAlmG0WRy2giCzxf8aQKJRjy2
+A+EaCLVkcOC44xHzxD+WVTBlwowsLQWygQK0n/47Ac62EbFcL7mw6AtGFTCCtOBm
+wj3ckERABwd/On5dNhQ327tRNNOPNgSpXcPRrcvep3LCE9UQNNNrNT2M4yncNlYi
+rFuMxqp3T4EvUP0P55AWNeqYgElJO8QcJbGDaTiaLE7tev3LR+rSA82TeWGvwalU
+FqQfckrCEgCTrL1MJR6P+bCnbdVQuvD6fsnaExG6jeTOzrLckvcY6BeKgCvhGVUS
+wNU54hzwe3ATYHPHIW/p
+=0n0L
 -----END PGP SIGNATURE-----
