@@ -1,6 +1,10 @@
 # ChangeLog for www-client/seamonkey
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.450 2013/04/14 21:09:56 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.451 2013/04/16 05:59:17 polynomial-c Exp $
+
+  16 Apr 2013; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.17.ebuild,
+  seamonkey-2.17.1.ebuild:
+  Only depend on allowed sqlite versions (bug #465978).
 
 *seamonkey-2.17.1 (14 Apr 2013)
 
